[package]
name = "solana-geyser-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
anyhow = "1.0.62"
async-trait = "0.1.73"
base64 = "0.21.0"
bincode = "1.3.3"
bytes = "1.3.0"
cargo-lock = "9.0.0"
chrono = "0.4.26"
clap = { version = "4.3.0", features = ["derive"] }
const-hex = "1.6.2"
crossbeam-channel = "0.5.8"
env_logger = "0.10.0"
hex = "0.4.3"
hostname = "0.3.1"
http = "0.2.8"
hyper = "0.14.27"
json5 = "0.4.1"
lazy_static = "1.4.0"
log = "0.4.17"

tokio = "1.21.2"
tokio-stream = "0.1.11"
tonic = "0.10.2"
tonic-build = "0.10.2"
tonic-health = "0.10.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
futures = "0.3.24"

serde = "1.0.203" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_bytes = "0.11.14"
serde_derive = "1.0.203" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.117"
serde_with = { version = "2.3.3", default-features = false }

solana-sdk = "~2.0.15"
solana-program = "~2.0.15"
solana-geyser-plugin-manager = "~2.0.15"
agave-geyser-plugin-interface = "~2.0.15"

libloading = "0.7.4"


#agave-account-decoder = "=1.17.28"
#agave-geyser-plugin-interface = "=1.17.28"
#agave-logger = "=1.17.28"
#solana-sdk = "=1.17.28"
#agave-transaction-status = "=1.17.28"
